--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
  # Reddit API Configuration
-REDDIT_CLIENT_ID=TPryoJum__lBoH_jMdB2tA
-REDDIT_CLIENT_SECRET=TawNZ2WjzSrJfKMkgrZwiT9kznlBqQ
-REDDIT_USER_AGENT=YoutubeShortsBot/1.0
+REDDIT_CLIENT_ID= "ENTER ID HERE"
+REDDIT_CLIENT_SECRET= "ENTER SECRET HERE"
+REDDIT_USER_AGENT= "ENTER USER AGENT HERE"
 
 # ElevenLabs API Configuration
-ELEVENLABS_API_KEY=sk_54c3ebbc87b59ccfc4d01d3ac43cadde1f8b0277a1fdbedb
-ELEVENLABS_VOICE_ID=uju3wxzG5OhpWcoi3SMy
+ELEVENLABS_API_KEY= "ENTER API KEY HERE"
+ELEVENLABS_VOICE_ID=uju3wxzG5OhpWcoi3SMy 
 
 # Video Configuration
 TARGET_SUBREDDIT=MaliciousCompliance
